Correction de l'importation de la classe Paths et ajout de commentaires explicatifs